--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
     },
     "dependencies": {
+        "@difftim/jsbridge-utils": "1.6.2",
         "@difftim/scheduler-component": "0.1.8-beta.1",
         "@tanstack/react-query": "4.36.1",
         "antd": "5.22.7",
@@ -19,6 +20,7 @@
         "esbuild-plugin-react-virtualized": "^1.0.5",
         "jotai": "2.7.0",
         "jotai-tanstack-query": "0.11.0",
+        "ky": "^1.14.2",
         "lodash": "4.17.21",
         "lz-string": "1.5.0",
         "react": "17.0.2",
