--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "jotai": "2.7.0",
         "jotai-tanstack-query": "0.11.0",
         "ky": "^1.14.2",
+        "linkify-react": "4.3.2",
+        "linkifyjs": "4.3.2",
         "lodash": "4.17.21",
         "lz-string": "1.5.0",
         "react": "17.0.2",
