--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "dependencies": {
         "@difftim/jsbridge-utils": "1.6.2",
-        "@difftim/scheduler-component": "0.1.8-beta.1",
+        "@difftim/scheduler-component": "^0.1.9",
         "@tanstack/react-query": "4.36.1",
         "antd": "5.22.7",
         "classnames": "2.3.2",
