[chore] new version

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "VITE_WEB_MEETING_URL=https://webmeeting.i365724.com tsc && VITE_WEB_MEETING_URL=https://webmeeting.i365724.com vite build",
+        "build:test": "VITE_WEB_MEETING_URL=https://webmeeting.bdb.im tsc && VITE_WEB_MEETING_URL=https://webmeeting.bdb.im vite build",
         "preview": "vite preview",
         "type-check": "tsc --noEmit",
         "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
